--- a/css/style.css
+++ b/css/style.css
@@ -179,17 +179,32 @@ code .tab3{
   nav{
     position: relative;
     width: 100%;
-    height: 300px;
+    height: 240px;
     padding-top: 10px;
+    font-size: 16px;
+  }
+
+  nav header{
+    margin-top: 1em;
+    margin-left: 2em;
   }
 
   nav ul{
-    padding-left: 1em;
+    padding: 0;
+    padding-left: 2em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 
   nav li{
-    padding: 5px 0;
     display: inline-block;
+    padding: 0;
+    font-size: 90%;
+  }
+
+  nav li a{
+    padding: 0;
+    line-height: 1.25em;
   }
 
   nav li:hover{
@@ -214,5 +229,11 @@ code .tab3{
 @media(min-width: 1200px){
   main{
     margin-left: 20%;
+  }
+}
+
+@media(max-width: 360px){
+  nav li{
+    font-size: 0.8em;
   }
 }
